* Added GUI for creating config files.